--- a/public/css/groupList.css
+++ b/public/css/groupList.css
@@ -56,7 +56,7 @@
 }
 
 .navbar li a:hover {
-    box-shadow: 10px 10px 5px rgb(115, 209, 228);
+    text-shadow: 2px 2px 5px black;
     color: rgb(193, 236, 245);
 }
 
@@ -70,6 +70,11 @@ body {
 
 .dropbtn {
     color: white;
+}
+
+.dropbtn:hover {
+    text-shadow: 2px 2px 5px black;
+    color: rgb(193, 236, 245);
 }
 
 .dropdown .dropbtn {
@@ -100,7 +105,7 @@ body {
 }
 
 #list-item:hover {
-    color: rgb(193, 236, 245);
+    color: rgb(0, 136, 167);
 }
 
 .dropdown:hover .dropdown-content {
