--- a/public/css/groupList.css
+++ b/public/css/groupList.css
@@ -154,3 +154,15 @@ body {
 .btn-primary {
     height: 30px;
 }
+
+.Group-List{
+    list-style: none;
+
+}
+#details-btn{
+    background-color: rgb(0, 136, 167);
+}
+.group{
+    
+
+}
