--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -179,7 +179,7 @@ body {
 }
 
 h1{
-  padding-left: 38rem;
+  padding-left: 55rem;
   color: white;
   background-color: rgb(0, 136, 167);
 }
@@ -200,3 +200,14 @@ h1{
      -moz-box-shadow: none;
      -ms-box-shadow: none
  }
+
+ .menu{
+    justify-content:space-around;
+ }
+ .btn-group, .btn-group-vertical {
+    position: relative;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    padding-left: 22rem;
+    vertical-align: middle;
+}
