--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -248,6 +248,47 @@ body {
     border-right: none;
 }
 
+form.example input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 20%;
+    background: #f1f1f1;
+    margin-left: 2rem;
+}
+
+form.example button {
+    float: left;
+    width: 5%;
+    padding: 10px;
+    background: #0088a7;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+}
+
+form.example button:hover {
+    background: black;
+}
+
+form.example::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.vl {
+    border-left: 2px solid #0088a7;
+    height: 100%;
+    position: absolute;
+    left: 30%;
+    margin-left: -3px;
+    top: 0;
+}
+
 
 /* Clear floats (clearfix hack) */
 
@@ -266,7 +307,7 @@ body {
 }
 
 h1 {
-    padding-left: 38rem;
+    padding-left: 8rem;
     color: white;
     background-color: rgb(0, 136, 167);
 }
@@ -286,4 +327,8 @@ h1 {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     -ms-box-shadow: none
+}
+
+.btn-info {
+    padding-left: 10px;
 }
