--- a/views/Signup.ejs
+++ b/views/Signup.ejs
@@ -38,7 +38,7 @@
 
                 <h1>Create Account!</h1><br>
 
-                <form action="/Signup.html" method="post">
+                <form action="/views/Signup" method="post">
                     <label for="name" id="form">First name</label>
                     <br>
                     <div>
