--- a/views/addGroup.ejs
+++ b/views/addGroup.ejs
@@ -48,7 +48,7 @@
     </nav>
 
     <br>
-    <form class="example" action="/addgroup.html" method="post">
+    <form class="example" action="addMember" method="post">
         <input type="text" placeholder="Search members.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
     </form>
