--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -46,15 +46,16 @@
     </nav>
     <br><br>
 
-    <form class="example" action="/addgroup.html" method="post">
-        <input type="text" placeholder="Search members.." name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
+    <form class="example" action="/html/detail.html" method="post">
+        <input type="text" placeholder="Search members.." name="uname">
+        <button type="menu"><i class="fa fa-search"></i></button>
+        <button type="submit">Add</button>
     </form>
     <div class="vl"></div>
-    <button type="button" class="btn btn-info" style="margin-top: 5px;position:relative; left:11rem; top:2px">Add</button>
+    
 
     <div style=" left:11rem; top:2px; float:right">
-        <h1 style="padding-left: 28rem;">Project Group</h1>
+        <h1 name="title" style="padding-left: 28rem;">Project Group</h1>
         <br>
         <div class="btn-group" style="padding-left: 5rem;">
             <button type="button" class="btn btn-info">Settle Up</button>
