--- a/views/login.ejs
+++ b/views/login.ejs
@@ -70,7 +70,7 @@
                     </div>
                     <br>
                     <div>
-                        <p>Not a member? <a href="/Signup.html">Register here</a></p>
+                        <p>Not a member? <a href="/Signup">Register here</a></p>
 
 
                     </div>
