--- a/views/groupList.ejs
+++ b/views/groupList.ejs
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#"><i class="bi bi-bell"></i> Notification</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/Profile.html"><i class="bi bi-person-circle"></i> Profile</a>
+                    <a class="nav-link" href=".../views/Profile.ejs"><i class="bi bi-person-circle"></i> Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="bi bi-gear"></i> Settings</a>
@@ -45,29 +45,36 @@
     </nav>
 
     <br>
-    <form action="/html/groupList.html" method="post">
+    <form action="/groupList" method="post">
         <div class="input-group">
             <input type="search" class="group-input" name="groupNm" class="form-control rounded" placeholder="Add a group" aria-label="Add" aria-describedby="search-addon" />
             <button type="submit" class="add-group-btn btn btn-outline-primary">Add</button>
         </div>
     </form><br>
-
-    <ul class="Group-List">
+    <!--
+        <ul class="Group-List">
         <li class="group">
             <div class="card w-50 h-25">
                 <div class="card-body">
-                    <h5 class="card-title">Project Group</h5>
-                    <a href="../html/detail.html" class="btn btn-primary" id="details-btn">Details</a>
+                    <h5 class="card-title"> Shareefo Ki basti</h5> 
+                    <a href="/views/detail.ejs" class="btn btn-primary" id="details-btn">Details</a>
                 </div>
             </div>
         </li>
     </ul>
 
-    <div class="fab-container">
-        <div class="button iconbutton">
-            <a href="../html/addGroup.html"><i class="bi bi-plus" style="font-size:3rem"></i></a>
+
+    -->
+
+    
+    <form action="/addGroup" method="post">
+        <div class="fab-container">
+            <div class="button iconbutton">
+                <a href="../html/addGroup.html"><i class="bi bi-plus" style="font-size:3rem"></i></a>
+            </div>
         </div>
-    </div>
+    </form>
+   
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
