--- a/views/addGroup.ejs
+++ b/views/addGroup.ejs
@@ -16,72 +16,43 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-custom navbar-mainbg">
-        <img class="navbar-brand navbar-logo" src="../images/logo.png" width="120" height="100">
+    <%- include('navbar.ejs') %>
 
-        <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white; height: 2.5rem;">
-    <i class="fas fa-bars text-white"></i>
-    </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <div class="hori-selector">
-                    <div class="left"></div>
-                    <div class="right"></div>
-                </div>
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/groupList.html"><i class="bi bi-people"></i> Group List</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#"><i class="bi bi-bell"></i> Notification</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/Profile.html"><i class="bi bi-person-circle"></i> Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-gear"></i> Settings</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="https://cdn-icons-png.flaticon.com/128/3329/3329438.png" width="20" height="20"> Log out</a>
-                </li> -->
-            </ul>
-        </div>
-    </nav>
+        <br>
+        <form class="example" action="addMember" method="post">
+            <input type="text" placeholder="Search members.." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+        <div class="vl"></div>
 
-    <br>
-    <form class="example" action="addMember" method="post">
-        <input type="text" placeholder="Search members.." name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
-    <div class="vl"></div>
-
-    <div style="position:relative; left:11rem; top:2px">
-        <button type="button" class="btn btn-info" style="margin-top: 5px;">Add</button>
-        <div style="position:relative; left:45rem; top:2px;">
-            <img src="../images/add.png" class="rounded-circle" alt="add">
-            <br><br>
-            <div style="position:relative; left:2rem; top:2px">
-                <form>
-                    <input type="text" id="group name" name="groupname" placeholder="Enter Group Name"><br><br>
-                    <div style="position:relative; left:2rem; top:2px">
-                        <button type="button" class="btn btn-info">Create Group</button><br>
-                        <div style="position:relative; left:25px; top:2px">
-                            <button type="button" class="btn btn-info" style="margin-top: 5px;">Cancel</button>
+        <div style="position:relative; left:11rem; top:2px">
+            <button type="button" class="btn btn-info" style="margin-top: 5px;">Add</button>
+            <div style="position:relative; left:45rem; top:2px;">
+                <img src="../images/add.png" class="rounded-circle" alt="add">
+                <br><br>
+                <div style="position:relative; left:2rem; top:2px">
+                    <form>
+                        <input type="text" id="group name" name="groupname" placeholder="Enter Group Name"><br><br>
+                        <div style="position:relative; left:2rem; top:2px">
+                            <button type="button" class="btn btn-info">Create Group</button><br>
+                            <div style="position:relative; left:25px; top:2px">
+                                <button type="button" class="btn btn-info" style="margin-top: 5px;">Cancel</button>
+                            </div>
                         </div>
-                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/navbar.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../js/navbar.js"></script>
 
 </body>
 
