--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -42,7 +42,7 @@
             <div class="btn-group" style="padding-left: 5rem;">
                 <button type="button" class="btn btn-info">Settle Up</button>
                 <button type="button" class="btn btn-info">Balance</button>
-                <button type="button" class="btn btn-info"><a href="../html/addExpense.html" style="text-decoration: none; color:white">Add Expenses</a></button>
+                <button type="button" class="btn btn-info"><a href="/addExpense" style="text-decoration: none; color:white">Add Expenses</a></button>
             </div>
             <br>
             <br>
