--- a/views/addExpense.ejs
+++ b/views/addExpense.ejs
@@ -53,7 +53,7 @@
         <br>
         <div>
             <input class="date" type="date">
-            <input class="totalbill" type="text" placeholder="Total Bill Amount" Required>
+            <input class="totalbill" type="text" name="Amount" placeholder="Total Bill Amount" Required>
         </div>
         <br>
         <div>
