--- a/views/groupList.ejs
+++ b/views/groupList.ejs
@@ -26,13 +26,13 @@
                     <div class="right"></div>
                 </div>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../html/groupList.html"><i class="bi bi-people"></i> Group List</a>
+                    <a class="nav-link" href="./groupList"><i class="bi bi-people"></i> Group List</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="#"><i class="bi bi-bell"></i> Notification</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../views/Profile.ejs"><i class="bi bi-person-circle"></i> Profile</a>
+                    <a class="nav-link" href="./Profile"><i class="bi bi-person-circle"></i> Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="bi bi-gear"></i> Settings</a>
@@ -62,18 +62,10 @@
             </div>
         </li>
     </ul>
-
-
     -->
+    
 
-
-    <form action="/addGroup" method="post">
-        <div class="fab-container">
-            <div class="button iconbutton">
-                <a href="../html/addGroup.html"><i class="bi bi-plus" style="font-size:3rem"></i></a>
-            </div>
-        </div>
-    </form>
+    
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
