--- a/views/addExpense.ejs
+++ b/views/addExpense.ejs
@@ -28,17 +28,14 @@
                 </div>
                 <br>
                 <div>
-                    <input class="date" type="date">
+                    <input name="date" class="date" type="date" placeholder="Date" required>
                     <input name="totAmount" class="totalbill" type="text" placeholder="Total Bill Amount" Required>
                 </div>
                 <br>
                 <div>
                     <input name="people" class="people" type="text" placeholder="Enter number of people" Required>
                 </div>
-                <!-- <br>
-                <div>
-                    <input name="splitPer" class="split" type="text" placeholder="Enter Split Percentage" Required>
-                </div> -->
+                <br>
                 <br>
                 <div>
                     <button class="button" type="submit" class="btn btn-info">SAVE</button>
