--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -28,7 +28,7 @@
     <%- include('navbar.ejs') %>
         <br><br>
 
-        <form class="example" action="/html/detail.html" method="post">
+        <form action="/views/detail" method="post">
             <input type="text" placeholder="Search members.." name="uname">
             <button type="menu"><i class="fa fa-search"></i></button>
             <button type="submit">Add</button>
