--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -48,7 +48,7 @@
                         <label class="pd_style_title" for="wallet">Wallet balance</label>
                         <span id="wb_display"> 0000.00 </span>
                     </div>
-                    <a href="./login"><button id = "logoutBtn">Logout</button></a>
+                    <a href="/login"><button id = "logoutBtn">Logout</button></a>
                 </div>
             </div>
         </section>
