--- a/public/css/addExpense.css
+++ b/public/css/addExpense.css
@@ -265,9 +265,13 @@ body {
 }
 
 .button {
-    width: 60px;
-    height: 60px;
+    width: 5rem;
+    height: 3rem;
     background: rgb(0, 136, 167);
+    border-radius: 0.3rem;
+    border-color: rgb(0, 136, 167);
+    margin-left: 47rem;
+    text-align: center;
 }
 
 .iconbutton i {
@@ -346,7 +350,7 @@ h2 {
 }
 
 .totalbill {
-    margin-left: 1rem;
+    margin-left: 3rem;
     height: 3rem;
     width: 21rem;
 }
@@ -363,20 +367,94 @@ h2 {
     width: 32rem;
 }
 
-.split {
-    margin-left: 3rem;
-    height: 3rem;
-    width: 32rem;
-}
 
-.button {
+/* .button {
     margin-left: 47rem;
     height: 3rem;
     width: 15rem;
     color: white;
     text-align: center;
-}
+} */
 
 .button:hover {
-    background-color: black;
+    background-color: white;
+}
+
+
+/* checkbox css */
+
+.checkbox-dropdown {
+    width: 200px;
+    border: 1px solid #aaa;
+    padding: 10px;
+    position: relative;
+    margin: 0 auto;
+    user-select: none;
+    margin-left: 38.7rem;
+}
+
+
+/* Display CSS arrow to the right of the dropdown text */
+
+.checkbox-dropdown:after {
+    content: '';
+    height: 0;
+    position: absolute;
+    width: 0;
+    border: 6px solid transparent;
+    border-top-color: #000;
+    top: 50%;
+    right: 10px;
+    margin-top: -3px;
+}
+
+
+/* Reverse the CSS arrow when the dropdown is active */
+
+.checkbox-dropdown.is-active:after {
+    border-bottom-color: #000;
+    border-top-color: #fff;
+    margin-top: -9px;
+}
+
+.checkbox-dropdown-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 100%;
+    /* align the dropdown right below the dropdown text */
+    border: inherit;
+    border-top: none;
+    left: -1px;
+    /* align the dropdown to the left */
+    right: -1px;
+    /* align the dropdown to the right */
+    opacity: 0;
+    /* hide the dropdown */
+    transition: opacity 0.4s ease-in-out;
+    height: 100px;
+    overflow: scroll;
+    overflow-x: hidden;
+    pointer-events: none;
+    /* avoid mouse click events inside the dropdown */
+}
+
+.is-active .checkbox-dropdown-list {
+    opacity: 1;
+    /* display the dropdown */
+    pointer-events: auto;
+    /* make sure that the user still can select checkboxes */
+}
+
+.checkbox-dropdown-list li label {
+    display: block;
+    border-bottom: 1px solid silver;
+    padding: 10px;
+    transition: all 0.2s ease-out;
+}
+
+.checkbox-dropdown-list li label:hover {
+    background-color: rgb(0, 136, 167);
+    color: white;
 }
