--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -36,7 +36,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/Profile/<%=fun[0]._id%>"
-              ><i class="bi bi-person-circle"></i> Profile</a
+              ><i class="bi bi-person-circle"></i> Hi <%=fun[0].name %></a
             >
           </li>
           <li class="nav-item">
