--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -10,102 +10,102 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/groupList.css">
     <link rel="stylesheet" href="../css/detail.css">
+    <link rel="stylesheet" media="screen and (max-width: 870px)" href="../css/addGroupPhone.css">
+    <link rel="stylesheet" media="screen and (max-width: 870px)" href="../css/addGroup1.css">
+    <link rel="stylesheet" media="screen and (max-width: 870px)" href="../css/detailPhone.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Include Twitter Bootstrap and jQuery: -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-    <!-- Include the plugin's CSS and JS: -->
-    <script type="text/javascript" src="js/bootstrap-multiselect.js"></script>
-    <link rel="stylesheet" href="css/bootstrap-multiselect.css" type="text/css" />
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <!-- Navbar section -->
     <%- include('navbar.ejs') %>
-        <br><br>
+        <!-- End of Navbar section -->
 
-        <form action="/addMember/<%=Group.id%>" method="post">
-            <input type="text" placeholder="Search members.." name="uname">
-
-            <button class="btn btn-primary pb-8" type="submit">Add</button>
-        </form>
-        <ul>
-            <% Group.memberArray.forEach(function(item) { %>
-                <li>
-                    <h4>
-                        <%= item  %>
-                    </h4>
-                </li>
-                <%    });%>
-        </ul>
-
-        <div class="vl"></div>
-
-
-        <div style=" left:11rem; top:2px; float:right">
-            <h1 name="title" style="padding-left: 28rem;">
+        <!-- Group name section -->
+        <div id="GroupTitle">
+            <h2>
                 <%=Group.gname%>
-            </h1>
-            <br>
-            <div class="btn-group" style="padding-left: 5rem;">
-                <button type="button" class="btn btn-info">Settle Up</button>
-                <button type="button" class="btn btn-info">Balance</button>
-                <button type="button" class="btn btn-info"><a href="/addExpense/<%=Group.id%>" style="text-decoration: none; color:white">Add Expenses</a></button>
-            </div>
-            <br>
-            <br>
+            </h2>
+            <a href=""><button id = "add_members" ><i class="fa fa-user-plus"></i></button></a>
+        </div>
+        <!-- End of Group name section -->
 
-            <div class="table-responsive table-hover">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>List of Expenses</th>
-                            <th>Amount</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% Transactions.forEach(function(item){%>
-                            <% var i =0%>
+        <!-- Page content container -->
+        <div id="container_d">
+            <!-- Expenses section -->
+            <section id="Expenses">
+                <div id="Action_btns" class="btn-group" style="margin-bottom:3rem;">
+                    <button>Settle Up</button>
+                    <button>Balance</button>
+                    <button><a href="/addExpense/<%=Group.id%>"  style="text-decoration: none; color:white">Add Expenses</a></button>
+                </div>
+                <div id="Exp_table" class="table-responsive table-hover">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>List of Expenses</th>
+                                <th>Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% for(var i =0; i< TransactionsList.length; i++){ %>
                                 <tr>
-
                                     <td>
-                                        <%= item%>
+                                        <%=TransactionsList[i] %>
                                     </td>
-
                                     <td>
-                                        <%=TransactionsAmt[i] %>
-                                            <%i++ %>
-
+                                        <%=TransactionsAmt[i]%>
                                     </td>
-
-
                                 </tr>
-                                <% }); %>
-                    </tbody>
-                </table>
-            </div>
+                                <%}%>
 
-            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <!-- End of Expenses section -->
 
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-            <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-            <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-            <script type="text/javascript" src="../js/navbar.js"></script>
+            <!-- Search and add member section -->
+            <section id="SearchM">
+                <div id="SearchBar">
+                    <form class="example" action="/addgroup.html" method="post">
+                        <input id="search_ip" type="text" placeholder="Add members.." name="uname">
+                        <button type="button" class="fa btn btn-info" style="width: 4rem">Add</button>
+                    </form>
+                    <ul>
+                        <% Group.memberArray.forEach(function(item) { %>
+                            <li>
+                                <h4>
+                                    <%= item  %>
+                                </h4>
+                            </li>
+                            <%    });%>
+                    </ul>
 
-            <!-- Initialize the plugin: -->
-            <script type="text/javascript">
-                $(document).ready(function() {
-                    $('#example-getting-started').multiselect();
-                });
-            </script>
+                </div>
+
+        </div>
+        </section>
+        <!-- End of search and add member section -->
+        </div>
+        <!-- End of Page content container -->
+
+
+
+
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../js/navbar.js"></script>
+
 
 </body>
 
