--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="/images/logo.png">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="../css/groupList.css" />
@@ -45,9 +47,9 @@
 
                     <div class="pd_elements">
                         <label class="pd_style_title" for="wallet">Wallet balance</label>
-                        <span id="wb_display"> 0000.00 </span>
+                        <span id="wb_display"> <%= User.Balance%> </span>
                     </div>
-                    <a href="./login"><button id="logoutBtn">Logout</button></a>
+                    <a href="/"><button id="logoutBtn">Logout</button></a>
                 </div>
             </div>
         </section>
