--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Details</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/images/logo.png">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/groupList.css">
@@ -28,7 +30,7 @@
             <h2>
                 <%=Group.gname%>
             </h2>
-            <a href=""><button id = "add_members" ><i class="fa fa-user-plus"></i></button></a>
+
         </div>
         <!-- End of Group name section -->
 
@@ -70,13 +72,13 @@
             <!-- Search and add member section -->
             <section id="SearchM">
                 <div id="SearchBar">
-                    <form class="example" action="/addgroup.html" method="post">
+                    <form class="example" action="/addMember/<%=Group.id%>" method="post">
                         <input id="search_ip" type="text" placeholder="Add members.." name="uname">
-                        <button type="button" class="fa btn btn-info" style="width: 4rem">Add</button>
+                        <button type="submit" class="fa btn btn-info" style="width: 4rem">Add</button>
                     </form>
-                    <ul>
+                    <ul class="list-group">
                         <% Group.memberArray.forEach(function(item) { %>
-                            <li>
+                            <li class="list-group-item">
                                 <h4>
                                     <%= item  %>
                                 </h4>
