--- a/views/groupList.ejs
+++ b/views/groupList.ejs
@@ -67,8 +67,9 @@
     ></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/navbar.js"></script>
+    <script src="../scripts/navbar.js"></script>
 
     <script src="../scripts/GroupList.js"></script>
+
   </body>
 </html>
