--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -30,7 +30,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="notifications/<%= fun[0]._id %>"
               ><i class="bi bi-bell"></i> Notification</a
             >
           </li>
@@ -54,7 +54,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/navbar.js"></script>
+    <script type="text/javascript" src="./js/navbar.js"></script>
 </body>
 
 </html>
