added ledger system

--- a/public/css/Auth.css
+++ b/public/css/Auth.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Josf', sans-serif;
     background: linear-gradient(to bottom, #80c8e9, #ffffff, #ffffff);
 }
 
