--- a/views/Auth.ejs
+++ b/views/Auth.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <title>Split Bills</title>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="shortcut icon" href="/images/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,7 +22,7 @@
                 <input type="text" name="lname" placeholder="last name" required="">
                 <input type="email" name="email" placeholder="Email" required="">
                 <input type="password" name="pass" placeholder="Password" required="">
-                <button type="submit">Sign up</button>
+                <button type="submit">Sign Up</button>
             </form>
         </div>
 
