--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/detail.css">
-
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,6 +40,7 @@
                     <button>Settle Up</button>
                     <button>Balance</button>
                     <button><a href="/addExpense/<%=Group.id%>"  style="text-decoration: none; color:white">Add Expenses</a></button>
+                    <a href="/Group/<%=id%>">Refresh</a>
                 </div>
                 <div id="Exp_table" class="table-responsive table-hover">
                     <table class="table table-bordered">
